Receiver program is complete

--- a/code/ibug/socket/Makefile
+++ b/code/ibug/socket/Makefile
@@ -2,13 +2,16 @@ CC ?= gcc
 
 .PHONY: all clean
 
-all: send
+all: send recv
 
 send: send.o util.o
+	${CC} -o $@ $^
+
+recv: recv.o util.o
 	${CC} -o $@ $^
 
 %.o: %.c config.h
 	${CC} ${CFLAGS} -c -o $@ $<
 
 clean:
-	rm -f send *.o
+	rm -f send recv *.o
